--- a/Environment_example.ipynb
+++ b/Environment_example.ipynb
@@ -28,25 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 117,
       "metadata": {
-        "id": "MXXTuy_o0sjk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4ff1263b-d699-4dca-9221-c1fe7e441644"
+        "id": "MXXTuy_o0sjk"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[K     |████████████████████████████████| 1.9 MB 4.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 62 kB 1.3 MB/s \n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install -q -U kaggle_environments"
       ]
@@ -66,7 +52,7 @@
       "metadata": {
         "id": "yz23vWHD0wcj"
       },
-      "execution_count": 3,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -94,15 +80,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34520e23-fb55-42b1-f907-b63912216a1d"
+        "outputId": "ab0e5c50-f5b5-47c7-ec24-2d30b55a9f47"
       },
-      "execution_count": 4,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing rock_agent.py\n"
+            "Overwriting rock_agent.py\n"
           ]
         }
       ]
@@ -137,9 +123,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ea76879-b4ae-4063-95de-14e10da96af3"
+        "outputId": "4b5c8945-2a26-4c87-81e3-2cef44d9737f"
       },
-      "execution_count": 37,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,15 +152,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lIo2oEDzI9WJ",
-        "outputId": "31a95acf-dfd0-411b-e63a-1d5372dd00de"
+        "outputId": "21ce47bb-4d2c-4a42-db70-48dac2b7fb26"
       },
-      "execution_count": 6,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing paper_agent.py\n"
+            "Overwriting paper_agent.py\n"
           ]
         }
       ]
@@ -195,15 +181,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xCsO8n3gJaCk",
-        "outputId": "341aa0ba-d0f0-4a65-9ca0-6fadf8812c6d"
+        "outputId": "968c2b23-6214-498d-bfe6-d598bfbcb73b"
       },
-      "execution_count": 7,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing scissors_agent.py\n"
+            "Overwriting scissors_agent.py\n"
           ]
         }
       ]
@@ -223,15 +209,131 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u8FMPVJaOjBR",
-        "outputId": "a19b6c23-ac6c-49ed-896d-714b0e44c082"
+        "outputId": "0cd683d8-5c93-4568-8d5b-49e25b02fcf7"
       },
-      "execution_count": 8,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing submission.py\n"
+            "Overwriting submission.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile reactionary.py\n",
+        "import random\n",
+        "from utils import get_score\n",
+        "\n",
+        "last_react_action = None\n",
+        "def reactionary(observation, configuration):\n",
+        "    global last_react_action\n",
+        "    if observation.step == 0:\n",
+        "        last_react_action = random.randrange(0, configuration.signs)\n",
+        "    elif get_score(last_react_action, observation.lastOpponentAction) <= 1:\n",
+        "        last_react_action = (observation.lastOpponentAction + 1) % configuration.signs\n",
+        "\n",
+        "    return last_react_action\n"
+      ],
+      "metadata": {
+        "id": "Z3F2TJZgQ1FV",
+        "outputId": "5053b5de-ad91-4127-d65f-49789322ca8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting reactionary.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile counter_reactionary.py\n",
+        "import random\n",
+        "from utils import get_score\n",
+        "\n",
+        "last_counter_action = None\n",
+        "def counter_reactionary(observation, configuration):\n",
+        "    global last_counter_action\n",
+        "    if observation.step == 0:\n",
+        "        last_counter_action = random.randrange(0, configuration.signs)\n",
+        "    elif get_score(last_counter_action, observation.lastOpponentAction) == 1:\n",
+        "        last_counter_action = (last_counter_action + 2) % configuration.signs\n",
+        "    else:\n",
+        "        last_counter_action = (observation.lastOpponentAction + 1) % configuration.signs\n",
+        "\n",
+        "    return last_counter_action"
+      ],
+      "metadata": {
+        "id": "nPkyqEbOXRWP",
+        "outputId": "8eb4c2bb-1650-4d8d-c74a-b82c9fdbd427",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 195,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting counter_reactionary.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile statistical.py\n",
+        "import random\n",
+        "from utils import get_score \n",
+        "\n",
+        "def statistical(observation, configuration):\n",
+        "    global action_histogram\n",
+        "    if observation.step == 0:\n",
+        "        action_histogram = {}\n",
+        "        return\n",
+        "    action = observation.lastOpponentAction\n",
+        "    if action not in action_histogram:\n",
+        "        action_histogram[action] = 0\n",
+        "    action_histogram[action] += 1\n",
+        "    mode_action = None\n",
+        "    mode_action_count = None\n",
+        "    for k, v in action_histogram.items():\n",
+        "        if mode_action_count is None or v > mode_action_count:\n",
+        "            mode_action = k\n",
+        "            mode_action_count = v\n",
+        "            continue\n",
+        "\n",
+        "    return (mode_action + 1) % configuration.signs"
+      ],
+      "metadata": {
+        "id": "BmsL07zzbF2u",
+        "outputId": "7d89e41d-622a-4d13-eb0b-b3a18634f9e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 197,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing statistical.py\n"
           ]
         }
       ]
@@ -248,7 +350,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from copy_opponent import copy_opponent\n",
         "evaluate(\n",
         "    \"rps\", #environment to use - no need to change\n",
         "    [\"submission.py\", \"copy_opponent.py\"], #agents to evaluate\n",
@@ -260,19 +361,109 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "264ff69e-620f-4668-8c26-0def25235df7"
+        "outputId": "d7c35697-a39b-41e6-bcb2-e2869dff6708"
       },
-      "execution_count": 115,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[-5.0, 5.0]]"
+              "[[6.0, -6.0]]"
             ]
           },
           "metadata": {},
-          "execution_count": 115
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evaluate(\n",
+        "    \"rps\", #environment to use - no need to change\n",
+        "    [\"reactionary.py\", \"copy_opponent.py\"], #agents to evaluate\n",
+        "    configuration={\"episodeSteps\": 100, 'tieRewardThreshold': 2} #number of episodes \n",
+        ")"
+      ],
+      "metadata": {
+        "id": "P8qdMf05RR8m",
+        "outputId": "0f11a99b-2cc6-4dac-c0c6-3cbd7e631ad3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[-99.0, 99.0]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 190
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evaluate(\n",
+        "    \"rps\", #environment to use - no need to change\n",
+        "    [\"counter_reactionary.py\", \"copy_opponent.py\"], #agents to evaluate\n",
+        "    configuration={\"episodeSteps\": 100, 'tieRewardThreshold': 2} #number of episodes \n",
+        ")"
+      ],
+      "metadata": {
+        "id": "6GsXUoA7XdzH",
+        "outputId": "830eb199-7f3d-4457-8efa-c05eb1e868d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 196,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[-96.0, 96.0]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 196
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evaluate(\n",
+        "    \"rps\", #environment to use - no need to change\n",
+        "    [\"statistical.py\", \"copy_opponent.py\"], #agents to evaluate\n",
+        "    configuration={\"episodeSteps\": 100, 'tieRewardThreshold': 1} #number of episodes \n",
+        ")"
+      ],
+      "metadata": {
+        "id": "oUVieZlfbQ-v",
+        "outputId": "5e3da8eb-8230-425d-a4c1-125aaaed8c9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 215,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[21.0, -21.0]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 215
         }
       ]
     },
@@ -290,9 +481,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ddf6dcc-6023-411f-851a-cd5b1af3fccb"
+        "outputId": "b07ab542-5e13-40cb-e6d8-1f8312bec423"
       },
-      "execution_count": 106,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 129
         }
       ]
     }
